# Review Processing - ML Workshop

## 04/07/19 
- add pre-computed semantic features for more fluid notebook execution
- move to generic index for sentiment ETL so random split doesn't matter
- use matplot to show side-by-side comparison (notebook H)
- break out training function into another helper (util_train)
- save performance figures for easier side-by-side comparison
- reformat the called/external sentiment features (notebook G)
- refactor output from our shared model (notebook E+F)

## 04/04/19 
- complete retraining with sentiment features (notebook H)
- move scalar training process to the 'util_review' helper script
- improve stability (index mismatches) for call script
- test (and reduce) sentiment deployments to just those working
- begin testing integration for final classifier build

## 04/01/19
- improve classification and scoring demo (notebook F)
- improve multi-sentiment classification demo (notebook G)
- improve utility classes for detected faults
- add some fault tolerance to call script (for URL/request errors)

## 03/31/19
- rename some scripts, populate remote call function
- added verbosity string to preprocessing functions
- fix call utility script for local and remote (via requests) calls
- update performance plotting to not need a model

## 03/28/19
- add scripts for calling wrapped and remote models
- initial creation and upload of scripts
  - basic environment configuration, simple model, data ETL, basline sharing
  - data description and linkage to other resources